repo_template/hubs/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: balsam-ui-service
spec:
  type: ClusterIP
  selector:
    app: balsam-ui
  ports:
    - protocol: TCP
      port: 80 ##HTTP
      targetPort: 8080 ##Kopplat till containerport i deploymenten
